fix: scanner close error, jdk 11